src/test/resources/parser/valid/functionReturn.sbsc
// test a simple function that returns a value

test = (a: str) -> {
    return a;
};


assert(test("bazinga") == "bazinga");
